# fluid-simulation

./: .gitignore  .gitmodules  CLI.md  CMakeLists.txt  CMakePresets.json  LICENSE  MEASUREMENT.md  README.md  main.cpp  vcpkg.json
analysis/: README.md  analyze_results.py  compare_configs.py  count_min_best.py  count_min_best_e4_avg.py  count_near_best.py  cross-state.sh  e1_runtime_compile_dist.py  e2_plot_step_times.py  e2_tables.py  e2_visualize_tables.py  e3_distributions.py  e4_comparison.py  extract_config.py  full-tuning.sh  pyproject.toml  run-best-configs.sh  visualize_e3_distributions.py
app/BIG/: CMakeLists.txt  application.cu  application.h  main.cu
app/devel/: CMakeLists.txt  application.cu  application.h  main.cu
app/dragon_collision/: CMakeLists.txt  application.cu  application.h  main.cu
app/fountain/: CMakeLists.txt  application.cu  application.h  main.cu
app/surface_tension/: CMakeLists.txt  application.cu  application.h  main.cu
app/tilting_box/: CMakeLists.txt  application.cu  application.h  main.cu
app/vortex/: CMakeLists.txt  application.cu  application.h  main.cu
cmake/: CMakeUserConfig.cmake.in  ConfigureTarget.cmake  RegisterApp.cmake
measurements/configs/: BIG_falling.json  BIG_settled.json  dragon_falling.json  dragon_settled.json  fountain_active.json  surface_settled.json  tilting_chaotic.json  vortex_active.json
measurements/snapshots/: dragon_falling.sphs  dragon_settled.sphs  fountain_active.sphs  surface_settled.sphs  tilting_chaotic.sphs  vortex_active.sphs
models/: sources.txt
shaders/: axes.frag  axes.vert  box.frag  box.vert  disk.frag  instanced_ball.frag  instanced_ball.vert  lit.frag  lit.vert  object.vert  shader.vert
src/: application.cpp  application.cu  application.h  asset_manager.h  box.cpp  camera.cpp  camera.h  cli.cu  cli.h  config.h  debug.cpp  debug.h  dfsph.cpp  dfsph.h  fluid.cpp  fluid.h  fluid_simulation.cpp  fluid_simulation.h  fluid_simulator.cpp  fluid_simulator.h  geometry.cpp  geometry.h  glfw.h  gui.cpp  gui.cu  gui.cuh  gui.h  kernel.cpp  kernel.h  main.cpp  main.cu  object.cpp  object.h  shader.cpp  shader.h  ubo.h  window.h
src/app/: application.cu  application.h  devel.cu  devel.h  tilting_box.cu  tilting_box.h
src/app/demo/: dragon_collision.cu  dragon_collision.h  fountain.cu  fountain.h  tilting_box.cu  tilting_box.h
src/cuda/: cuda_gl_buffer.cpp  cuda_gl_buffer.h  init.h  math.cuh  particle_data_visualizer.cuh  simulator.cpp  simulator.cu  simulator.h  util.cuh
src/cuda/SPH/: kernel.cuh  particle_data.cuh  particle_data_visualizer.cu  particle_data_visualizer.cuh  snapshot.cu  snapshot.cuh  sph.cu  sph.cuh  sph_base.cu  sph_base.cuh
src/cuda/nsearch/: morton.cuh  neighbor_list.cuh  nsearch.cuh  nsearch.h
src/cuda/tuning/: apply_external_forces.cuh  apply_pressure_force.cuh  compute_boundary_mass.cuh  compute_densities.cuh  compute_pressure.cuh  compute_surface_normals.cuh  compute_surface_tension.cuh  compute_viscosity.cuh  config_loader.cpp  config_loader.h  density_kernel.cu  density_tuner.cpp  density_tuner.cu  density_tuner.cuh  density_tuner.h  rebuild_n_search.cuh  step_tuner.cuh  tuner.cpp  tuner.h  tuning_scheduler.h  update_positions.cuh  update_positions_tuner.cu  update_positions_tuner.cuh  update_velocities.cuh
src/cuda/tuning/kernels/: apply_external_forces.cu  apply_pressure_force.cu  apply_pressure_force_n_normal.cu  common.cu  common.cuh  compute_boundary_mass.cu  compute_densities.cu  compute_neighbor_list.cu  compute_non_pressure_accel.cu  compute_pressure.cu  compute_pressure_accel_n_normal.cu  compute_rho_p.cu  compute_surface_normals.cu  compute_surface_tension.cu  compute_viscosity.cu  density_kernel.cu  rebuild_n_search.cu  update_positions.cu  update_velocities.cu
src/render/: asset_manager.h  box.cpp  box.h  camera.cpp  camera.h  fluid.h  geometry.cpp  geometry.h  light.h  material.h  model.h  object.cpp  object.h  shader.cpp  shader.h  ssbo.h  ubo.h
src/simulation/: fluid_simulator.cpp  fluid_simulator.h
src/simulation/SPH/: boundary.cpp  boundary.h  common.cpp  common.h  dfsph.cpp  dfsph.h  kernel.cpp  kernel.h  sph.cpp  sph.h  sph_base.cpp  sph_base.h
test/cuda/: nsearch.cu
